--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
+@import-normalize;
+
+a{
+  color: inherit;
+  text-decoration: none;
+  font-size: calc((1vh + 1vw)*0.8);
+
+}
+a:hover,
+a:visited,
+a:active{
+  color: inherit;
+}
+
+
