--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,14 @@
-@import 'bootstrap/dist/css/bootstrap.min.css';
-@import-normalize;
+/* @import-normalize; */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a{
-  color: inherit;
-  text-decoration: none;
-  font-size: calc((1vh + 1vw)*0.8);
-}
 body{
   font-size: calc((1vh + 1vw)*0.8);
-
-}
-a:hover,
-a:visited,
-a:active{
-  color: inherit;
 }
 
+.active{
+  color: black;
+  border-bottom: 2px solid;
+}
 
