--- a/src/styles.css
+++ b/src/styles.css
@@ -26,5 +26,14 @@ a:active{
     font-size: 1.2rem;
 }
 .wrapper {
-  background-color: blue;
+  min-height: 100vh;
 }
+.light{
+  background-color: lightblue;
+}
+.dark{
+  background-color: rgb(12, 12, 53);
+  color:white
+}
+
+
