--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
-@import 'bootstrap/dist/css/bootstrap.min.css';
 @import-normalize;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;800&display=swap');
 
 a{
   color: inherit;
@@ -8,7 +8,8 @@ a{
 }
 body{
   font-size: calc((1vh + 1vw)*0.8);
-
+  font-family: 'Montserrat', sans-serif;
+  ;
 }
 a:hover,
 a:visited,
